# tablecruncher

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
assets/linux/: tablecruncher.desktop  tablecruncher.flatpak.json
docs/dev/: RELEASE.md
docs/user/: docs-1.8.ascii  docs-1.8.html  release-notes.txt
scripts/: build_appimage.sh  buildwin.bat  create-bundle.sh  sign-and-notarize.sh  version.txt  win-setup.iss
src/: Doxyfile  colorthemes.cpp  colorthemes.hh  csvapplication.cpp  csvapplication.hh  csvdatastorage.cpp  csvdatastorage.hh  csvgrid.cpp  csvgrid.hh  csvmenu.cpp  csvmenu.hh  csvparser.cpp  csvparser.hh  csvtable.cpp  csvtable.hh  csvundo.cpp  csvundo.hh  csvwidgets.cpp  csvwidgets.hh  csvwindow.cpp  csvwindow.hh  globals.hh  helper.cpp  helper.hh  macro.cpp  macro.hh  main.cpp  recentfiles.hh  simplefifo.hh
src/icons/: abouticon.xpm  icon-add-col-left.xpm  icon-add-col-right.xpm  icon-add-row-above.xpm  icon-add-row-below.xpm  icon-alert.xpm  icon-del-col.xpm  icon-del-row.xpm  icon-info.xpm  icon-minus.xpm  icon-open.xpm  icon-plus.xpm  icon-question.xpm  icon-save-as.xpm  icon-save.xpm  icon-separator.xpm
